# flask-video-stream

./: .gitignore  README.md  dotter.py  main.py  main_h265.py  main_webrtp.py  nuitka_cmd.txt  pyproject.toml
hls/: stream.m3u8  stream50.ts  stream51.ts  stream52.ts  stream53.ts  stream83.ts  stream84.ts  stream85.ts  stream86.ts
static/: index.html
templates/: index.html
