[project]
name = "flask-video-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "aiortc>=1.12.0",
    "fastapi>=0.115.12",
    "flask[async]>=3.1.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "uvicorn>=0.34.2",
]
